addBalanceRoute+swagger+fixedCurrent
